internal/compiler/testdata/fuzz/crashers/c6042e54397eb92c50943598b2f3f0a505b8b65e.output
panic: runtime error: invalid memory address or nil pointer dereference
[signal SIGSEGV: segmentation violation code=0x1 addr=0x0 pc=0x1141232]

goroutine 1 [running]:
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00012bc00, 0x0, 0xc000128dc0, 0x1, 0x203000, 0x203000)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:241 +0x52
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileExpr(0xc00012bc00, 0xc0001218c0, 0x11a83a0, 0xc00012bc40, 0xc0001264e0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:244 +0x9b5
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileSelect(0xc00012bc00, 0xc000113540, 0x0, 0x2, 0xc000132e67, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:96 +0x27c
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).compileInternal(0xc00012bc00, 0xc00013cc00, 0x0, 0x2, 0xc000132e67, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:54 +0x7e
github.com/tomarrell/lbadd/internal/compiler.(*simpleCompiler).Compile(0xc00012bc00, 0xc00013cc00, 0x0, 0x0, 0x0, 0x0)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler.go:34 +0x54
github.com/tomarrell/lbadd/internal/compiler.Fuzz(0x8a21000, 0x17, 0x17, 0x3)
	/Users/tsatke/Development/private/github.com/tomarrell/lbadd/internal/compiler/simple_compiler_fuzzy.go:38 +0x3a4
go-fuzz-dep.Main(0xc00006df70, 0x1, 0x1)
	go-fuzz-dep/main.go:36 +0x1ad
main.main()
	github.com/tomarrell/lbadd/internal/compiler/go.fuzz.main/main.go:15 +0x52
exit status 2